syntax = "proto3";

package proto;

option go_package = "./;proto";

service CommonService {
    rpc UpdateProvdier(PatchRequest) returns (CommonReply) {}
    rpc Heatbeat (HeatbeatRequest) returns (CommonReply) {}
}

message PatchRequest {
   message Patch {
           string name  = 1;
           string url  = 2;
      }
    repeated Patch add  = 1;
    repeated Patch remove  = 2;
}

message HeatbeatRequest {

}

message CommonReply {
    //状态码
    int32 code = 1;
    //错误信息
    string msg = 2;
}